feat: Detach likeCount from comment and reply